Adding jquery to scripts and index.html

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 <div id="output" aria-atomic="true" aria-live="polite"></div><!--/#output-->
 
 <!-- Keeping JS at the bottom, because we rock at performance -->
+<script src="js/jquery.js"></script>
 <script src="js/addressbook.js"></script>
 
 </body>
